--- a/Txr-system-v3 ( web )/.project
+++ b/Txr-system-v3 ( web )/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Txr-system-v3</name>
+	<name>Txr-system-v3 ( web )</name>
 	<comment></comment>
 	<projects>
 	</projects>
