--- a/Txr-system-v4/.project
+++ b/Txr-system-v4/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Txr-system-v7 ( spring boot )</name>
+	<name>Txr-system-v4</name>
 	<comment></comment>
 	<projects>
 	</projects>
